Split the GRPC proto file
* Split into that needed by the library, and that needed by the
  example.
* There are now 2 proto files, 2 swagger files, etc.
