# pb/goapi.pb.go
@@ -1,0 +1,253 @@
+// Code generated by protoc-gen-go.
+// source: pb/goapi.proto
+// DO NOT EDIT!
+
+/*
+Package pb is a generated protocol buffer package.
+
+It is generated from these files:
+	pb/goapi.proto
+
+It has these top-level messages:
+	AuthRequestMessage
+	AuthResponseMessage
+	UserMessage
+*/
+package pb
+
+import proto "github.com/golang/protobuf/proto"
+import fmt "fmt"
+import math "math"
+import _ "google.golang.org/genproto/googleapis/api/annotations"
+
+import (
+	context "golang.org/x/net/context"
+	grpc "google.golang.org/grpc"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the proto package it is being compiled against.
+// A compilation error at this line likely means your copy of the
+// proto package needs to be updated.
+const _ = proto.ProtoPackageIsVersion2 // please upgrade the proto package
+
+type AuthRequestMessage struct {
+	GrantType string `protobuf:"bytes,1,opt,name=grant_type,json=grantType" json:"grant_type,omitempty"`
+	Username  string `protobuf:"bytes,2,opt,name=username" json:"username,omitempty"`
+	Password  string `protobuf:"bytes,3,opt,name=password" json:"password,omitempty"`
+}
+
+func (m *AuthRequestMessage) Reset()                    { *m = AuthRequestMessage{} }
+func (m *AuthRequestMessage) String() string            { return proto.CompactTextString(m) }
+func (*AuthRequestMessage) ProtoMessage()               {}
+func (*AuthRequestMessage) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{0} }
+
+func (m *AuthRequestMessage) GetGrantType() string {
+	if m != nil {
+		return m.GrantType
+	}
+	return ""
+}
+
+func (m *AuthRequestMessage) GetUsername() string {
+	if m != nil {
+		return m.Username
+	}
+	return ""
+}
+
+func (m *AuthRequestMessage) GetPassword() string {
+	if m != nil {
+		return m.Password
+	}
+	return ""
+}
+
+type AuthResponseMessage struct {
+	AccessToken string `protobuf:"bytes,1,opt,name=access_token,json=accessToken" json:"access_token,omitempty"`
+	TokenType   string `protobuf:"bytes,2,opt,name=token_type,json=tokenType" json:"token_type,omitempty"`
+	ExpiresIn   int64  `protobuf:"varint,3,opt,name=expires_in,json=expiresIn" json:"expires_in,omitempty"`
+}
+
+func (m *AuthResponseMessage) Reset()                    { *m = AuthResponseMessage{} }
+func (m *AuthResponseMessage) String() string            { return proto.CompactTextString(m) }
+func (*AuthResponseMessage) ProtoMessage()               {}
+func (*AuthResponseMessage) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{1} }
+
+func (m *AuthResponseMessage) GetAccessToken() string {
+	if m != nil {
+		return m.AccessToken
+	}
+	return ""
+}
+
+func (m *AuthResponseMessage) GetTokenType() string {
+	if m != nil {
+		return m.TokenType
+	}
+	return ""
+}
+
+func (m *AuthResponseMessage) GetExpiresIn() int64 {
+	if m != nil {
+		return m.ExpiresIn
+	}
+	return 0
+}
+
+type UserMessage struct {
+	Id       string `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
+	Username string `protobuf:"bytes,2,opt,name=username" json:"username,omitempty"`
+	Password string `protobuf:"bytes,3,opt,name=password" json:"password,omitempty"`
+	Name     string `protobuf:"bytes,4,opt,name=name" json:"name,omitempty"`
+	Role     string `protobuf:"bytes,5,opt,name=role" json:"role,omitempty"`
+}
+
+func (m *UserMessage) Reset()                    { *m = UserMessage{} }
+func (m *UserMessage) String() string            { return proto.CompactTextString(m) }
+func (*UserMessage) ProtoMessage()               {}
+func (*UserMessage) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{2} }
+
+func (m *UserMessage) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
+
+func (m *UserMessage) GetUsername() string {
+	if m != nil {
+		return m.Username
+	}
+	return ""
+}
+
+func (m *UserMessage) GetPassword() string {
+	if m != nil {
+		return m.Password
+	}
+	return ""
+}
+
+func (m *UserMessage) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *UserMessage) GetRole() string {
+	if m != nil {
+		return m.Role
+	}
+	return ""
+}
+
+func init() {
+	proto.RegisterType((*AuthRequestMessage)(nil), "pb.AuthRequestMessage")
+	proto.RegisterType((*AuthResponseMessage)(nil), "pb.AuthResponseMessage")
+	proto.RegisterType((*UserMessage)(nil), "pb.UserMessage")
+}
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ context.Context
+var _ grpc.ClientConn
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+const _ = grpc.SupportPackageIsVersion4
+
+// Client API for Auth service
+
+type AuthClient interface {
+	Auth(ctx context.Context, in *AuthRequestMessage, opts ...grpc.CallOption) (*AuthResponseMessage, error)
+}
+
+type authClient struct {
+	cc *grpc.ClientConn
+}
+
+func NewAuthClient(cc *grpc.ClientConn) AuthClient {
+	return &authClient{cc}
+}
+
+func (c *authClient) Auth(ctx context.Context, in *AuthRequestMessage, opts ...grpc.CallOption) (*AuthResponseMessage, error) {
+	out := new(AuthResponseMessage)
+	err := grpc.Invoke(ctx, "/pb.Auth/Auth", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// Server API for Auth service
+
+type AuthServer interface {
+	Auth(context.Context, *AuthRequestMessage) (*AuthResponseMessage, error)
+}
+
+func RegisterAuthServer(s *grpc.Server, srv AuthServer) {
+	s.RegisterService(&_Auth_serviceDesc, srv)
+}
+
+func _Auth_Auth_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AuthRequestMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AuthServer).Auth(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/pb.Auth/Auth",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AuthServer).Auth(ctx, req.(*AuthRequestMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+var _Auth_serviceDesc = grpc.ServiceDesc{
+	ServiceName: "pb.Auth",
+	HandlerType: (*AuthServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Auth",
+			Handler:    _Auth_Auth_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "pb/goapi.proto",
+}
+
+func init() { proto.RegisterFile("pb/goapi.proto", fileDescriptor0) }
+
+var fileDescriptor0 = []byte{
+	// 307 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x91, 0xb1, 0x4e, 0xf3, 0x30,
+	0x10, 0xc7, 0xd5, 0xb4, 0xdf, 0xa7, 0xe6, 0x0a, 0x1d, 0x5c, 0x09, 0xa2, 0x8a, 0x4a, 0x90, 0x09,
+	0x31, 0x34, 0x02, 0x36, 0x36, 0x46, 0x24, 0x58, 0xaa, 0x30, 0x47, 0x4e, 0x73, 0x4a, 0xad, 0x16,
+	0xdb, 0xf8, 0x9c, 0x42, 0x07, 0x16, 0x5e, 0x81, 0x47, 0xe3, 0x15, 0x78, 0x10, 0x64, 0x3b, 0x01,
+	0x21, 0x36, 0xa6, 0xdc, 0xfd, 0xfe, 0x89, 0x7e, 0x77, 0x17, 0x18, 0xeb, 0x32, 0xab, 0x15, 0xd7,
+	0x62, 0xae, 0x8d, 0xb2, 0x8a, 0x45, 0xba, 0x9c, 0x1e, 0xd5, 0x4a, 0xd5, 0x1b, 0xcc, 0xb8, 0x16,
+	0x19, 0x97, 0x52, 0x59, 0x6e, 0x85, 0x92, 0x14, 0xde, 0x48, 0xd7, 0xc0, 0xae, 0x1b, 0xbb, 0x5a,
+	0xe0, 0x63, 0x83, 0x64, 0xef, 0x90, 0x88, 0xd7, 0xc8, 0x66, 0x00, 0xb5, 0xe1, 0xd2, 0x16, 0x76,
+	0xa7, 0x31, 0xe9, 0x1d, 0xf7, 0x4e, 0xe3, 0x45, 0xec, 0x49, 0xbe, 0xd3, 0xc8, 0xa6, 0x30, 0x6c,
+	0x08, 0x8d, 0xe4, 0x0f, 0x98, 0x44, 0x3e, 0xfc, 0xea, 0x5d, 0xa6, 0x39, 0xd1, 0x93, 0x32, 0x55,
+	0xd2, 0x0f, 0x59, 0xd7, 0xa7, 0x5b, 0x98, 0x04, 0x19, 0x69, 0x25, 0x09, 0x3b, 0xdb, 0x09, 0xec,
+	0xf1, 0xe5, 0x12, 0x89, 0x0a, 0xab, 0xd6, 0x28, 0x5b, 0xdf, 0x28, 0xb0, 0xdc, 0x21, 0x37, 0x90,
+	0xcf, 0xc2, 0x40, 0xc1, 0x19, 0x7b, 0xe2, 0x07, 0x9a, 0x01, 0xe0, 0xb3, 0x16, 0x06, 0xa9, 0x10,
+	0xd2, 0x6b, 0xfb, 0x8b, 0xb8, 0x25, 0x37, 0x32, 0x7d, 0x81, 0xd1, 0x3d, 0xa1, 0xe9, 0x7c, 0x63,
+	0x88, 0x44, 0xd5, 0x5a, 0x22, 0x51, 0xfd, 0x75, 0x1d, 0xc6, 0x60, 0xe0, 0xbf, 0x19, 0x78, 0xee,
+	0x6b, 0xc7, 0x8c, 0xda, 0x60, 0xf2, 0x2f, 0x30, 0x57, 0x5f, 0xe4, 0x30, 0x70, 0x6b, 0xb3, 0xdb,
+	0xf6, 0x79, 0x30, 0xd7, 0xe5, 0xfc, 0xf7, 0xd5, 0xa7, 0x87, 0xdf, 0xfc, 0xc7, 0x81, 0xd2, 0xc9,
+	0xeb, 0xfb, 0xc7, 0x5b, 0xb4, 0x9f, 0x0e, 0xb3, 0xed, 0x79, 0xc6, 0x1b, 0xbb, 0xba, 0xea, 0x9d,
+	0x95, 0xff, 0xfd, 0x0f, 0xbc, 0xfc, 0x0c, 0x00, 0x00, 0xff, 0xff, 0x02, 0xeb, 0xec, 0xfe, 0xf4,
+	0x01, 0x00, 0x00,
+}
